<resources>
    <string name="app_name">P\'sGetDegrees</string>
    <string name="unit_code">Unit Code</string>
    <string name="unit_name">Unit Name</string>
    <string name="calculate_wam">Calculate WAM</string>
    <string name="credit_points">Credit Points</string>
    <string name="mark">Mark</string>
    <string name="unit_marks">Unit Marks</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="tab_text_1">WAM</string>
    <string name="tab_text_2">Subject Mark</string>
    <string name="tab_text_3">Saved Marks</string>
    <string name="add_unit">Add Unit</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="value">Value</string>
    <string name="mark_percent">Mark (%)</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="calculate_unit_mark">Calculate Subject Mark</string>
    <string name="save_unit_mark">Save Unit Mark</string>
    <string name="delete_all_units">Delete All Subjects</string>
    <string name="delete_assessments">Delete Assessments</string>
    <string name="delete_marks">Delete Marks</string>
    <string name="unit_name_code_optional">Subject Name/Code (optional)</string>
    <string name="level_1_unit">Level 1 Subject</string>
    <string name="level_2_plus_unit">Level 2+ Subject</string>
    <string name="credit">Credit:</string>
    <string name="mark_colon">Mark:</string>
    <string name="year_level_colon">Year Level:</string>
    <string name="one">1</string>
    <string name="two_plus">2+</string>
    <string name="slash">/</string>
    <string name="assessment_name_optional">Assessment Name (optional)</string>
    <string name="value_or_weight">Value/Weight</string>
    <string name="value_colon">Value:</string>
    <string name="wam_desc">The Weighted Average Mark (WAM) is the average mark achieved across all completed subjects in a course, including any failed and repeated subjects. It is out of 100.</string>
    <string name="wam_title">Weighted Average Mark (WAM)</string>
    <string name="method_title">Method</string>
    <string name="weightings_title">Year Level Weightings</string>
    <string name="formula_title">Formula</string>
    <string name="wam_numerator">(subject mark x subject credit points x year level weight)</string>
    <string name="sigma">∑</string>
    <string name="wam_denominator">(subject credit points x year level weight)</string>
    <string name="wam_equals">WAM =</string>
    <string name="weightings_1">First year (undergraduate) - 0.5 weighting</string>
    <string name="weightings_2">All other year levels - 1.0 weighting</string>
    <string name="subject_mark_title">Subject Mark Title</string>
    <string name="subject_mark_equal">Subject Mark =</string>
    <string name="hundred">100</string>
    <string name="x">x</string>
    <string name="scored_mark">Scored Mark</string>
    <string name="total_marks">Total Marks</string>
    <string name="weight_equals">Weight:</string>
    <string name="subject_mark">Subject Mark</string>
    <string name="year_level">Year Level</string>
    <string name="weighting">Weighting</string>
    <string name="first_year_undergraduate">First year (undergraduate)</string>
    <string name="_0_5">0.5</string>
    <string name="all_other_year_levels">All other year levels</string>
    <string name="_1_0">1.0</string>
    <string name="wam">WAM</string>
    <string name="equal">=</string>
    <string name="weight">Weight</string>
    <string name="clear_assessments">Clear Assessments</string>
    <string name="clear_subject_mark">Clear Subject Mark</string>
    <string name="clear_wam">Clear WAM</string>
    <string name="clear_subjects">Clear Subjects</string>

</resources>
