<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">
    
    <EditText
        android:id="@+id/et_unit_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit_code" />

    <EditText
        android:id="@+id/et_credit_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credit_points"
        android:layout_below="@+id/et_unit_code"
        android:layout_alignParentStart="true"
        android:inputType="number"/>

    <EditText
        android:id="@+id/et_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mark"
        android:layout_below="@+id/et_credit_points"
        android:layout_alignParentStart="true"
        android:inputType="number"/>

</RelativeLayout>