<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".WamInfoActivity">

        <TextView
            android:id="@+id/tv_wam_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="14dp"
            android:text="@string/wam_title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/wam_desc"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_wam_title" />

        <TextView
            android:id="@+id/tv_formula_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="14dp"
            android:text="@string/formula_title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_wam_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="casual"
            android:padding="14dp"
            android:text="@string/wam"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_formula_title" />

        <TextView
            android:id="@+id/tv_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/equal"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_wam_equals"
            app:layout_constraintStart_toEndOf="@+id/tv_wam_equals" />

        <TextView
            android:id="@+id/sigma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sigma"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintStart_toStartOf="@+id/line" />

        <TextView
            android:id="@+id/tv_wam_numerator"
            android:layout_width="186dp"
            android:layout_height="85dp"
            android:layout_marginStart="8dp"
            android:fontFamily="casual"
            android:text="@string/wam_numerator"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintStart_toEndOf="@+id/sigma" />

        <View
            android:id="@+id/line"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_equal"
            app:layout_constraintStart_toEndOf="@+id/tv_equal" />

        <TextView
            android:id="@+id/sigma2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/sigma"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/wam_denominator"
            android:layout_width="179dp"
            android:layout_height="61dp"
            android:layout_marginStart="8dp"
            android:fontFamily="casual"
            android:text="@string/wam_denominator"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/sigma2"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/tv_weightings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:padding="14dp"
            android:text="@string/weightings_title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wam_denominator" />

        <TableLayout
            android:id="@+id/weightings_table"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_below="@+id/tv_weightings_title"
            android:layout_marginTop="10dp"
            android:background="#E3E4E4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_weightings_title">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/year_level"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/weighting"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:padding="8dp"
                    android:text="@string/first_year_undergraduate"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:padding="8dp"
                    android:text="@string/_0_5"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:padding="8dp"
                    android:text="@string/all_other_year_levels"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:padding="8dp"
                    android:text="@string/_1_0"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>