<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SubjectInfoActivity">

        <TextView
            android:id="@+id/tv_subject_mark_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="14dp"
            android:text="@string/subject_mark"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_formula_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="14dp"
            android:text="@string/formula_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subject_mark_title" />

        <TextView
            android:id="@+id/tv_subject_mark_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="casual"
            android:padding="10dp"
            android:text="@string/subject_mark_equal"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_formula_title" />

        <TextView
            android:id="@+id/sigma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sigma"
            android:textColor="@android:color/black"
            android:textSize="33sp"
            app:layout_constraintStart_toEndOf="@+id/tv_subject_mark_equals"
            app:layout_constraintTop_toTopOf="@+id/tv_subject_mark_equals" />

        <TextView
            android:id="@+id/tv_subject_mark_formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="casual"
            android:text="@string/weight"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintStart_toStartOf="@+id/line" />

        <View
            android:id="@+id/line"
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_subject_mark_equals"
            app:layout_constraintStart_toEndOf="@+id/sigma" />

        <TextView
            android:id="@+id/tv_hundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="casual"
            android:text="@string/hundred"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/tv_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="casual"
            android:text="@string/x"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_subject_mark_equals"
            app:layout_constraintStart_toEndOf="@+id/line" />

        <TextView
            android:id="@+id/tv_mark_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="casual"
            android:text="@string/scored_mark"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/line2"
            app:layout_constraintStart_toStartOf="@+id/line2" />

        <View
            android:id="@+id/line2"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_subject_mark_equals"
            app:layout_constraintStart_toEndOf="@+id/tv_multiply" />

        <TextView
            android:id="@+id/tv_mark_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="casual"
            android:text="@string/total_marks"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/line2"
            app:layout_constraintTop_toBottomOf="@+id/line2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>