<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_assessment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/assessment_name_optional" />

    <EditText
        android:id="@+id/et_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/value_or_weight"
        android:layout_below="@+id/et_assessment_name"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tv_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_value"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/mark_colon"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_mark_numerator"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/et_value"
        android:layout_toEndOf="@+id/tv_mark"/>

    <TextView
        android:id="@+id/tv_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_value"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/et_mark_numerator"
        android:text="@string/slash"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_mark_denominator"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/et_value"
        android:layout_toEndOf="@+id/tv_slash"/>




</RelativeLayout>